--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,15 @@ jobs:
         with:
           version: 0.15.2
 
+      - name: Cache Zig
+        uses: actions/cache@v4
+        with:
+          path: |
+            zig-cache
+            ~/.cache/zig
+          key: ${{ runner.os }}-zig-${{ hashFiles('**/build.zig', '**/build.zig.zon', '**/zig.mod', '**/zig.mod.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-zig-
+
       - name: Run logic-layer tests
         run: zig build test
