--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,10 @@ jobs:
             pkg: linux-x64
             target: x86_64-linux
             binary: vtx-ffmpeg-forge
+          - os: ubuntu-latest
+            pkg: linux-musl-x64
+            target: x86_64-linux-musl
+            binary: vtx-ffmpeg-forge
           - os: windows-latest
             pkg: win32-x64
             target: x86_64-windows
@@ -67,6 +71,7 @@ jobs:
       matrix:
         include:
           - pkg: linux-x64
+          - pkg: linux-musl-x64
           - pkg: darwin-x64
           - pkg: darwin-arm64
           - pkg: win32-x64
