--- a/npm/vtx-ffmpeg-forge/package.json
+++ b/npm/vtx-ffmpeg-forge/package.json
@@ -11,6 +11,7 @@
   ],
   "optionalDependencies": {
     "@vtx-ffmpeg-forge/linux-x64": "0.1.0",
+    "@vtx-ffmpeg-forge/linux-musl-x64": "0.1.0",
     "@vtx-ffmpeg-forge/darwin-x64": "0.1.0",
     "@vtx-ffmpeg-forge/darwin-arm64": "0.1.0",
     "@vtx-ffmpeg-forge/win32-x64": "0.1.0"
