--- a/npm/vtx-ffmpeg-forge/package.json
+++ b/npm/vtx-ffmpeg-forge/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vtx-ffmpeg-forge",
+  "name": "@vtxdeo/ffmpeg-forge",
   "version": "0.1.0",
   "main": "index.js",
   "bin": {
@@ -10,10 +10,11 @@
     "index.js"
   ],
   "optionalDependencies": {
-    "@vtx-ffmpeg-forge/linux-x64": "0.1.0",
-    "@vtx-ffmpeg-forge/linux-musl-x64": "0.1.0",
-    "@vtx-ffmpeg-forge/darwin-x64": "0.1.0",
-    "@vtx-ffmpeg-forge/darwin-arm64": "0.1.0",
-    "@vtx-ffmpeg-forge/win32-x64": "0.1.0"
+    "@vtxdeo/linux-x64": "0.1.0",
+    "@vtxdeo/linux-musl-x64": "0.1.0",
+    "@vtxdeo/darwin-x64": "0.1.0",
+    "@vtxdeo/darwin-arm64": "0.1.0",
+    "@vtxdeo/win32-x64": "0.1.0"
   }
 }
+
