--- a/npm/linux-musl-x64/package.json
+++ b/npm/linux-musl-x64/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vtx-ffmpeg-forge/linux-musl-x64",
+  "name": "@vtxdeo/linux-musl-x64",
   "version": "0.1.0",
   "description": "The linux-musl-x64 binary for vtx-ffmpeg-forge",
   "os": ["linux"],
@@ -7,3 +7,4 @@
   "main": "bin/vtx-ffmpeg-forge",
   "files": ["bin"]
 }
+
