--- a/npm/win32-x64/package.json
+++ b/npm/win32-x64/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vtx-ffmpeg-forge/win32-x64",
+  "name": "@vtxdeo/win32-x64",
   "version": "0.1.0",
   "description": "The win32-x64 binary for vtx-ffmpeg-forge",
   "os": ["win32"],
@@ -7,3 +7,4 @@
   "main": "bin/vtx-ffmpeg-forge.exe",
   "files": ["bin"]
 }
+
