--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ on:
 permissions:
   contents: write
   id-token: write
+  actions: write
 
 jobs:
   build:
@@ -55,7 +56,7 @@ jobs:
         uses: goto-bus-stop/setup-zig@v2
         with:
           version: 0.15.2
-          cache: false
+          cache: true
 
       - name: Build binary
         working-directory: ${{ env.WORKDIR }}
