--- a/npm/darwin-arm64/package.json
+++ b/npm/darwin-arm64/package.json
@@ -2,6 +2,10 @@
   "name": "@vtxdeo/darwin-arm64",
   "version": "0.1.0",
   "description": "The darwin-arm64 binary for vtx-ffmpeg-forge",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Vtxdeo/vtx-ffmpeg-forge"
+  },
   "os": ["darwin"],
   "cpu": ["arm64"],
   "main": "bin/vtx-ffmpeg-forge",
