--- a/npm/linux-musl-x64/package.json
+++ b/npm/linux-musl-x64/package.json
@@ -2,6 +2,10 @@
   "name": "@vtxdeo/linux-musl-x64",
   "version": "0.1.0",
   "description": "The linux-musl-x64 binary for vtx-ffmpeg-forge",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Vtxdeo/vtx-ffmpeg-forge"
+  },
   "os": ["linux"],
   "cpu": ["x64"],
   "main": "bin/vtx-ffmpeg-forge",
