--- a/npm/darwin-x64/package.json
+++ b/npm/darwin-x64/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@vtxdeo/darwin-x64",
-  "version": "0.1.0",
+  "version": "0.1.7",
   "description": "The darwin-x64 binary for vtx-ffmpeg-forge",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Vtxdeo/vtx-ffmpeg-forge"
+    "url": "git+https://github.com/Vtxdeo/vtx-ffmpeg-forge.git"
   },
   "os": ["darwin"],
   "cpu": ["x64"],
   "main": "bin/vtx-ffmpeg-forge",
   "files": ["bin"]
 }
+
+
 
