--- a/npm/linux-musl-x64/package.json
+++ b/npm/linux-musl-x64/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@vtxdeo/linux-musl-x64",
-  "version": "0.1.0",
+  "version": "0.1.7",
   "description": "The linux-musl-x64 binary for vtx-ffmpeg-forge",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Vtxdeo/vtx-ffmpeg-forge"
+    "url": "git+https://github.com/Vtxdeo/vtx-ffmpeg-forge.git"
   },
   "os": ["linux"],
   "cpu": ["x64"],
   "main": "bin/vtx-ffmpeg-forge",
   "files": ["bin"]
 }
+
+
 
