ci: fix release artifact download path and resolve WORKDIR
- Move artifact download paths into the workspace to avoid `/artifacts` permission errors
- Add WORKDIR resolution to ensure release jobs operate within the correct working directory

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -208,6 +208,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: publish-main
     steps:
+      - name: Resolve workspace root
+        shell: bash
+        run: |
+          if [ -d "vtx-ffmpeg-forge" ]; then
+            echo "WORKDIR=vtx-ffmpeg-forge" >> "$GITHUB_ENV"
+          else
+            echo "WORKDIR=." >> "$GITHUB_ENV"
+          fi
+
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
