ci: rename downloaded artifacts with platform-specific suffixes

--- a/npm/darwin-arm64/package.json
+++ b/npm/darwin-arm64/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vtxdeo/darwin-arm64",
+  "name": "@vtxdeo/ffmpeg-forge-darwin-arm64",
   "version": "0.1.8",
   "description": "The darwin-arm64 binary for vtx-ffmpeg-forge",
   "repository": {
