--- a/npm/darwin-x64/package.json
+++ b/npm/darwin-x64/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vtxdeo/darwin-x64",
+  "name": "@vtxdeo/ffmpeg-forge-darwin-x64",
   "version": "0.1.8",
   "description": "The darwin-x64 binary for vtx-ffmpeg-forge",
   "repository": {
