--- a/npm/linux-x64/package.json
+++ b/npm/linux-x64/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vtxdeo/linux-x64",
+  "name": "@vtxdeo/ffmpeg-forge-linux-x64",
   "version": "0.1.8",
   "description": "The linux-x64 binary for vtx-ffmpeg-forge",
   "repository": {
