--- a/npm/win32-x64/package.json
+++ b/npm/win32-x64/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vtxdeo/win32-x64",
+  "name": "@vtxdeo/ffmpeg-forge-win32-x64",
   "version": "0.1.8",
   "description": "The win32-x64 binary for vtx-ffmpeg-forge",
   "repository": {
@@ -11,7 +11,3 @@
   "main": "bin/vtx-ffmpeg-forge.exe",
   "files": ["bin"]
 }
-
-
-
-
